--- a/doc/style.css
+++ b/doc/style.css
@@ -1,16 +1,11 @@
 body {
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(252, 252, 248);
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     padding: 15px 0px;
 }
 
-div.document {
-    border: 1px solid rgb(236, 233, 233);
-    box-shadow: 1px 1px 2px rgb(225, 225, 225);
-    border-radius: 3px;
-}
 
 
 div.body {
@@ -22,6 +17,22 @@ div.body pre {
     background-color: #fbf6e6;
 }
 
+div.body .section:target > h1,
+div.body .section:target > h2,
+div.body .section:target > h3,
+div.body .section:target > h4,
+div.body .section:target > h5,
+dt:target,
+p:target,
+div.body span:target + h1,
+div.body span:target + h2,
+div.body span:target + h3,
+div.body span:target + h4,
+div.body span:target + h5 {
+    background: #d8d0c2;
+    text-shadow: none;
+}
+
 div.body span:target + h5 {
     background: #e6ddba;
     text-shadow: none;
@@ -29,6 +40,7 @@ div.body span:target + h5 {
 
 div.body code.descname, div.body tt.descname {
     font-size: 100%;
+    color: #2e3436;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -40,7 +52,35 @@ img, div.figure {
 }
 
 code, tt {
+    font-weight: normal;
     text-shadow: none;
+    color: #7b603c;
+}
+
+code.xref, a code {
+    color: #204a87;
+    font-weight: normal;
+}
+
+div.related, div.document {
+    border-radius: 3px;
+    box-shadow: 0px 0px 3px rgb(225, 225, 220);
+    border: 1px solid rgb(236, 236, 233);
+    width: 100%;
+}
+
+div.related ul {
+    padding: 0px 10px;
+}
+
+
+div.related a {
+    color: #204a87;
+}
+
+
+div.body a:hover {
+    color: #204a87;
 }
 
 div.figure {
@@ -59,13 +99,9 @@ table.field-list th {
     padding: 0px;
 }
 
-td.field-body strong {
-    font-style: italic;
-}
-
 table.docutils {
-    border: none !important;
-    box-shadow: none !important;
+    border: none;
+    box-shadow: none;
 }
 
 table.docutils th {
@@ -74,12 +110,15 @@ table.docutils th {
 }
 
 table {
-    text-shadow: 1px 1px 1px rgba(221, 221, 221, 0.6);
-}  
+    text-shadow: none;
+}
 
 table.field-list strong {
+    font-family: monospace,sans-serif;
+    font-style: normal;
     font-weight: normal;
-    font-style: italic;
+    font-size: 0.95em;
+    color: #7b603c;
 }
 
 table.field-list td {
@@ -89,8 +128,8 @@ table.field-list td {
     padding: 0px;
 }
 
-table {
-    box-shadow: 1px 1px 1px rgba(239, 239, 239, 0.6);
+pre, table {
+    box-shadow: 0px 0px 2px rgba(225, 225, 220, 0.6);
 }
 
 dl.gattribute dt {
@@ -112,39 +151,57 @@ dl.gattribute dd p:first-child {
     margin: 0px;
 }
 
+dl.method dt,
+dl.class dt,
+dl.function dt,
+dl.exception dt {
+    padding-left: 5em;
+    text-indent: -5em;
+}
+
+
+dl.function dt em,
+dl.fuction dt span.sig-paren,
+dl.method dt em,
+dl.method dt span.sig-paren,
+dl.class dt em,
+dl.class dt span.sig-paren,
+dl.exception dt em,
+dl.exception dt span.sig-paren {
+    font-family: monospace,sans-serif;
+    font-style: normal;
+    font-size: 100%;
+    color: #7b603c;
+}
+
 div.body {
-    padding: none !important;
+    background-color: transparent;
 }
 
 div.body img {
-    box-shadow: none !important;
+    box-shadow: none;
 }
 
 div.highlight pre {
-    background-color: #fbf6e6 !important;
+    background-color: #fbf6e6;
+    border: 1px solid #e4dbbf;
 }
 
 div.sphinxsidebar {
     display: none;
 }
 
-div.related {
-    border-radius: 3px;
-    box-shadow: 1px 1px 2px rgb(225, 225, 225);
-    border: 1px solid rgb(236, 233, 233);
-}
-
-div.related ul {
-    padding: 0px 10px;
-}
-
 dl.function, dl.class, dl.exception {
     border-bottom: 1px solid #f0f0f0;
 }
 
+dl.function:last-child, dl.class:last-child, dl.exception:last-child {
+    border-bottom: none;
+}
+
 dl.method, dl.attribute, dl.gattribute {
     border-top: 1px solid #f0f0f0;
-    margin-top: 15px;
+    padding-top: 15px;
 }
 
 div.footer {
@@ -152,10 +209,21 @@ div.footer {
     text-align: center;
 }
 
+div.body a.headerlink {
+    color: #bfd0e6;
+}
+
 span.viewcode-link {
-    color: #c0c0c0;
-    font-size: 80%;
-    font-family: Monospace;
+    float: none;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    color: #bfd0e6;
+    visibility: hidden;
+}
+
+dt:hover  span.viewcode-link,
+div.code-block-caption:hover  span.viewcode-link {
+    visibility: visible;
 }
 
 @media only screen and (max-width: 1024px) {
